--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* border: 1px solid red; */
+    margin: 0;
+    padding: 0;
+    /* border: 0; */
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
 
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1F2937;
-    color: #F9FAF8;
-    padding: 0 192px;    
+    background: #1f2937;
+    color: #f9fAf8;
+    padding: 0 192px;
 }
 
 .header-left {
@@ -20,4 +28,44 @@
 
 h1 {
     font-size: 24px;
+}
+
+h2 {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.container-1 {
+    display: flex;
+    background: #1f2937;
+    color: #f9fAf8;
+    padding: 48px 192px;
+    gap: 48px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container-1-left {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.container-1-left p {
+    font-size: 18px;
+}
+
+.container-1-right {
+    max-width: 400px;
+}
+
+.sign-up-button-1 {
+    padding: 6px 24px;
+    max-width: max-content;
+    background: #3882f6;
+    color: #f9fAf8;
+    font-size: 18px;
+    font-weight: 700;
+    border: 0px;
+    border-radius: 6px;
 }
