--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h2 {
 }
 
 .container-1-right {
-    max-width: 400px;
+    max-width: 350px;
 }
 
 .sign-up-button-1 {
@@ -68,4 +68,52 @@ h2 {
     font-weight: 700;
     border: 0px;
     border-radius: 6px;
+}
+
+
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    padding: 48px 192px 96px;
+    background: #f9fAf8;
+}
+
+h3 {
+    align-self: center;
+    font-size: 24px;
+    margin-bottom: 24px;
+}
+
+.image-row {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.image-with-subtext {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    align-items: center;
+    max-width: 180px;
+    text-align: center;
+}
+
+.image-with-subtext p {
+    margin-top: 16px;
+}
+
+.image-small {
+    height: 180px;
+    width: 180px;
+    /* overflow: hidden; */
+    border: 3px solid #3882f6;
+    border-radius: 20px;
+}
+
+.container-3 {
+    display: flex;
+    flex-direction: column;
+    padding: 24px 192px;
+    background: #e5e7eb;
 }
