--- a/style.css
+++ b/style.css
@@ -114,6 +114,19 @@ h3 {
 .container-3 {
     display: flex;
     flex-direction: column;
-    padding: 24px 192px;
+    padding: 64px 312px;
     background: #e5e7eb;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.quoter {
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 12px;
+    align-self: flex-end;
 }
