--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     /* border: 1px solid red; */
     margin: 0;
     padding: 0;
-    /* border: 0; */
+    border: 0;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
     justify-content: space-between;
     background: #1f2937;
     color: #f9fAf8;
-    padding: 0 192px;
+    padding: 6px 192px;
 }
 
 .header-left {
@@ -59,29 +59,37 @@ h2 {
     max-width: 350px;
 }
 
-.sign-up-button-1 {
-    padding: 6px 24px;
+.sign-up-button-1,
+.sign-up-button-2 {
+    padding: 6px 36px;
     max-width: max-content;
     background: #3882f6;
     color: #f9fAf8;
     font-size: 18px;
-    font-weight: 700;
-    border: 0px;
+    font-weight: 500;
     border-radius: 6px;
 }
 
+.sign-up-button-1 {   
+    border: 0px;
+}
 
+.sign-up-button-2 {   
+    border: 2px solid #f9fAf8;
+    align-self: center;
+}
 
 .container-2 {
     display: flex;
     flex-direction: column;
-    padding: 48px 192px 96px;
+    padding: 48px 192px 72px;
     background: #f9fAf8;
 }
 
 h3 {
     align-self: center;
-    font-size: 24px;
+    font-size: 36px;
+    font-weight: 900;
     margin-bottom: 24px;
 }
 
@@ -129,4 +137,31 @@ h3 {
     font-weight: 700;
     margin-top: 12px;
     align-self: flex-end;
+}
+
+.container-4 {
+    display: flex;
+    margin: 48px 192px;
+    padding: 36px 96px;
+    justify-content: space-between;
+    background: #3882f6;
+    color: #f9fAf8;
+    border-radius: 6px;
+}
+
+h4 {
+    font-size: 20px;
+}
+
+.container-4 p {
+    font-weight: 300;
+}
+
+.footer {
+    display: flex;
+    padding: 24px 0px;
+    justify-content: center;
+    background: #1f2937;
+    color: #f9fAf8;
+    font-size: 12px;
 }
